UV Image Editor. UV Sculpt toggle button doesn't show hotkey label when active #46537

Closed
opened 2015-10-19 10:27:43 +02:00 by Reiner Prokein · 5 comments

System Information
Operating system and graphics card

Win 7 64 Bit
Nvidia 760 GTX

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Blender 2.76

Short description of error

UV Image Editor. UV Sculpt toggle button doesn't show hotkey label when active. Minibug, nevertheless worth a report :)

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

New Scene. Switch to UV Editing. Unwrap the standard cube with let's say Project from View so that you have something to work with. In Image Editor go to the UVs menu, and have a look at the UV Sculpt checkbox. It has the hotkey Q.

Tick it. The label Q at the checkbox will vanish.

uvsculpt.jpg

**System Information** Operating system and graphics card Win 7 64 Bit Nvidia 760 GTX **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) Blender 2.76 **Short description of error** UV Image Editor. UV Sculpt toggle button doesn't show hotkey label when active. Minibug, nevertheless worth a report :) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps New Scene. Switch to UV Editing. Unwrap the standard cube with let's say Project from View so that you have something to work with. In Image Editor go to the UVs menu, and have a look at the UV Sculpt checkbox. It has the hotkey Q. Tick it. The label Q at the checkbox will vanish. ![uvsculpt.jpg](https://archive.blender.org/developer/F245878/uvsculpt.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tiles

Added subscriber: @tiles

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-10-20 19:48:02 +02:00

This issue was referenced by 5b3af3dd46

This issue was referenced by 5b3af3dd46307fcf5389f1ede9cfb9da77b120a4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46537
No description provided.