Fix T46537: UV Image Editor. UV Sculpt toggle button doesn't show hotkey label when active.

Poll function of that keymap was slightly... agressive.